fix wrapping, hide tip block on self

--- a/frontend/client/components/Profile/ProfileUser.less
+++ b/frontend/client/components/Profile/ProfileUser.less
@@ -34,6 +34,8 @@
       font-size: 1rem;
       opacity: 0.7;
       margin-bottom: 0.3rem;
+      max-width: fit-content;
+      margin-right: 1rem;
     }
 
     &-address {
